--- a/dash/app/src/main/res/layout/activity_pattern.xml
+++ b/dash/app/src/main/res/layout/activity_pattern.xml
@@ -19,19 +19,44 @@
         android:id="@+id/notep"
         android:layout_width="340sp"
         android:layout_height="match_parent"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
         android:alpha="50"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/tvimgp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/note" />
+
+    <ImageView
+        android:id="@+id/minimapp"
+        android:layout_width="170sp"
+        android:layout_height="170sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.116"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <ImageView
+        android:id="@+id/tvimgp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <ImageButton
         android:id="@+id/exitButtonp"
         style="@android:style/Widget.Holo.ImageButton"
         android:layout_width="65sp"
         android:layout_height="65sp"
-        android:onClick="exitButtontClicked"
+        android:onClick="exitButtonpClicked"
         android:scaleType="centerInside"
         app:layout_constraintBottom_toBottomOf="@+id/activity_surface_view"
         app:layout_constraintEnd_toEndOf="@+id/activity_surface_view"
@@ -43,25 +68,20 @@
         style="@android:style/Widget.Holo.ImageButton"
         android:layout_width="70sp"
         android:layout_height="70sp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:onClick="nextButtontClicked"
+        android:onClick="nextButtonpClicked"
         android:scaleType="centerInside"
-        app:layout_constraintBottom_toBottomOf="@+id/activity_surface_view"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/activity_surface_view"
-        app:layout_constraintTop_toTopOf="@+id/activity_surface_view"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@android:drawable/ic_media_next" />
 
-    <ImageView
-        android:id="@+id/tvimgp"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+    <ImageButton
+        android:id="@+id/refreshButtonp"
+        style="@android:style/Widget.Holo.ImageButton"
+        android:layout_width="70sp"
+        android:layout_height="70sp"
+        android:onClick="refreshButtonpClicked"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:srcCompat="@android:drawable/ic_menu_revert" />
 
 </android.support.constraint.ConstraintLayout>
