--- a/dash/app/src/main/res/layout/activity_tutorial.xml
+++ b/dash/app/src/main/res/layout/activity_tutorial.xml
@@ -44,16 +44,10 @@
         style="@android:style/Widget.Holo.ImageButton"
         android:layout_width="70sp"
         android:layout_height="70sp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:onClick="nextButtontClicked"
         android:scaleType="centerInside"
-        app:layout_constraintBottom_toBottomOf="@+id/activity_surface_view"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/activity_surface_view"
-        app:layout_constraintTop_toTopOf="@+id/activity_surface_view"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@android:drawable/ic_media_next" />
 
     <ImageView
@@ -62,7 +56,9 @@
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
 </android.support.constraint.ConstraintLayout>
