--- a/dash/app/src/main/res/layout/activity_pattern.xml
+++ b/dash/app/src/main/res/layout/activity_pattern.xml
@@ -56,6 +56,7 @@
         style="@android:style/Widget.Holo.ImageButton"
         android:layout_width="65sp"
         android:layout_height="65sp"
+        android:layout_marginEnd="42dp"
         android:onClick="exitButtonpClicked"
         android:scaleType="centerInside"
         app:layout_constraintBottom_toBottomOf="@+id/activity_surface_view"
@@ -68,6 +69,7 @@
         style="@android:style/Widget.Holo.ImageButton"
         android:layout_width="70sp"
         android:layout_height="70sp"
+        android:layout_marginEnd="42dp"
         android:onClick="nextButtonpClicked"
         android:scaleType="centerInside"
         app:layout_constraintEnd_toEndOf="parent"
@@ -79,6 +81,7 @@
         style="@android:style/Widget.Holo.ImageButton"
         android:layout_width="70sp"
         android:layout_height="70sp"
+        android:layout_marginStart="42dp"
         android:onClick="refreshButtonpClicked"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
