--- a/dash/app/src/main/res/values/styles.xml
+++ b/dash/app/src/main/res/values/styles.xml
@@ -8,6 +8,7 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:windowFullscreen">true</item>
     </style>
 
     <style name="SplashTheme" parent="@android:style/Theme.Black.NoTitleBar">
